--- a/.github/workflows/client-staging-ios-deploy.yml
+++ b/.github/workflows/client-staging-ios-deploy.yml
@@ -10,12 +10,14 @@ on:
 jobs:
   deploy:
     name: Internal Staging Deployment
-    runs-on: macos-latest
+    runs-on: macos-13
     defaults:
       run:
         working-directory: packages/client
-
     steps:
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2
         with:
