dependency:  add gradient_borders

--- a/packages/client/pubspec.yaml
+++ b/packages/client/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_modular: ^6.3.2
   flutter_platform_widgets: ^3.3.5
   google_fonts: ^5.1.0
+  gradient_borders: ^1.0.0
   haptic_feedback: ^0.4.2
   http: ^1.1.0
   intl: ^0.18.1
