--- a/packages/client/pubspec.yaml
+++ b/packages/client/pubspec.yaml
@@ -71,7 +71,7 @@ dev_dependencies:
   patrol: ^2.3.2
 
 flutter:
-  # uses-material-design: true
+  uses-material-design: true
   assets:
     - .env
     - assets/app_logo.png
