--- a/packages/client/android/app/build.gradle
+++ b/packages/client/android/app/build.gradle
@@ -36,7 +36,7 @@ if (keystorePropertiesFile.exists()) {
 
 android {
     namespace 'com.nokhte.nokhte'
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
