--- a/packages/client/pubspec.yaml
+++ b/packages/client/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   add_2_calendar: ^3.0.1
   agora_rtc_engine: ^6.2.6
+  android_package_manager: ^0.7.1
   audioplayers: ^5.2.0
   blur: ^3.1.0
   clipboard: ^0.1.3
