--- a/.github/workflows/client-staging-android-deploy.yml
+++ b/.github/workflows/client-staging-android-deploy.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/setup-java@v4
         with:
-          distribution: 'oracle' 
+          distribution: 'corretto' 
           java-version: '11'
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2
