--- a/packages/client/android/app/src/main/AndroidManifest.xml
+++ b/packages/client/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.nokhte.nokhte">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 	<uses-permission
 		android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission
@@ -7,7 +7,6 @@
 		android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission
 		android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<!--  -->
 	<uses-permission
 		android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<uses-permission
@@ -27,11 +26,10 @@
 	<uses-permission
 		android:name="android.permission.VIBRATE" />
 	<uses-permission
-		android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-	<uses-permission
 		android:name="android.permission.WRITE_CALENDAR" />
 	<uses-permission
 		android:name="android.permission.READ_CALENDAR" />
+
 	<queries>
 		<intent>
 			<action android:name="android.intent.action.INSERT" />
