--- a/packages/backend/supabase/config.toml
+++ b/packages/backend/supabase/config.toml
@@ -87,3 +87,7 @@ vector_port = 54328
 gcp_project_id = ""
 gcp_project_number = ""
 gcp_jwt_path = "supabase/gcloud.json"
+
+
+[functions.receive-glassfy-webhook]
+verify_jwt = false
