--- a/.github/workflows/client-production-android-deploy.yml
+++ b/.github/workflows/client-production-android-deploy.yml
@@ -29,13 +29,13 @@ jobs:
       - run: |
           echo "PROD_SUPABASE_URL='$PROD_SUPABASE_URL'" >> .env
           echo "PROD_SUPABASE_ANON_KEY='$PROD_SUPABASE_ANON_KEY'" >> .env
-          echo "AGORA_APP_ID='$AGORA_APP_ID'" >> .env
           echo "APP_ID='$APP_ID'" >> .env
+          echo "GLASSFY_PROD_API_KEY='$GLASSFY_PROD_API_KEY'" >> .env
         env:
           PROD_SUPABASE_URL: ${{ secrets.PROD_SUPABASE_URL }}
           PROD_SUPABASE_ANON_KEY: ${{ secrets.PROD_SUPABASE_ANON_KEY }}
-          AGORA_APP_ID: ${{ secrets.AGORA_APP_ID }}
           APP_ID: ${{ secrets.PROD_APP_ID }}
+          GLASSFY_PROD_API_KEY: ${{ secrets.GLASSFY_PROD_API_KEY }}
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.0"
