--- a/.github/workflows/client-staging-ios-deploy.yml
+++ b/.github/workflows/client-staging-ios-deploy.yml
@@ -28,12 +28,12 @@ jobs:
           echo "PROD_SUPABASE_URL='$STAGING_SUPABASE_URL'" >> .env
           echo "PROD_SUPABASE_ANON_KEY='$STAGING_SUPABASE_ANON_KEY'" >> .env
           echo "AGORA_APP_ID='$AGORA_APP_ID'" >> .env
-          echo "APP_ID='$APP_ID'" >> .env
+          echo "GLASSFY_STAGING_API_KEY='$GLASSFY_STAGING_API_KEY'" >> .env
         env:
           APP_ID: ${{ secrets.STAGING_APP_ID }}
           STAGING_SUPABASE_URL: ${{ secrets.STAGING_SUPABASE_URL }}
           STAGING_SUPABASE_ANON_KEY: ${{ secrets.STAGING_SUPABASE_ANON_KEY }}
-          AGORA_APP_ID: ${{ secrets.AGORA_APP_ID }}
+          GLASSFY_STAGING_API_KEY: ${{ secrets.GLASSFY_STAGING_API_KEY }}
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.0"
