--- a/.github/workflows/client-production-android-deploy.yml
+++ b/.github/workflows/client-production-android-deploy.yml
@@ -18,12 +18,12 @@ jobs:
     steps:
       - uses: actions/setup-java@v4
         with:
-            distribution: 'corretto' 
-            java-version: '11'
+          distribution: "corretto"
+          java-version: "11"
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.13.9"
+          flutter-version: "3.19.3"
           channel: "stable"
       - uses: bluefireteam/melos-action@v3
       - run: |
