--- a/.github/workflows/client-staging-android-deploy.yml
+++ b/.github/workflows/client-staging-android-deploy.yml
@@ -18,8 +18,10 @@ jobs:
     steps:
       - uses: actions/setup-java@v4
         with:
-          distribution: "corretto"
-          java-version: "11"
+          distribution: "zulu"
+          java-version: "17"
+          cache: 'gradle'
+          check-latest: true
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2
         with:
