chore: add back automated backend deployment on staging (matters much less here)

--- a/.github/workflows/backend-staging-deploy.yml
+++ b/.github/workflows/backend-staging-deploy.yml
@@ -1,5 +1,10 @@
 name: Backend Staging Deployment
 on:
+  push:
+    branches:
+      - staging
+    paths:
+      - packages/backend/**
   workflow_dispatch:
 
 jobs:
