--- a/packages/client/android/app/build.gradle
+++ b/packages/client/android/app/build.gradle
@@ -52,7 +52,7 @@ android {
         appAuthRedirectScheme: applicationId
       ]
         minSdkVersion 24
-        targetSdkVersion flutter.targetSdkVersion
+        targetSdkVersion 34 
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
