--- a/.github/workflows/client-staging-android-deploy.yml
+++ b/.github/workflows/client-staging-android-deploy.yml
@@ -1,10 +1,10 @@
 name: Client Android Staging Deploy
 on:
-  # push:
-  #   branches:
-  #     - staging
-  #   paths:
-  #     - "packages/client/**"
+  push:
+    branches:
+      - staging
+    paths:
+      - "packages/client/**"
   workflow_dispatch:
 
 jobs:
