--- a/packages/client/pubspec.yaml
+++ b/packages/client/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   glassfy_flutter: ^1.6.2
   google_fonts: ^5.1.0
   gradient_borders: ^1.0.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   intl: ^0.18.1
   mobile_scanner: ^5.1.1
   mobx: ^2.2.1
@@ -33,6 +35,7 @@ dependencies:
   permission_handler: ^11.0.0
   posthog_flutter: ^4.4.1
   qr_flutter: ^4.1.0
+  quick_actions: ^1.0.7
   sign_in_with_apple: ^5.0.0
   simple_animations: ^5.0.2
   simple_gradient_text: ^1.3.0
