add: android signInWithApple compat

--- a/packages/client/android/app/src/main/AndroidManifest.xml
+++ b/packages/client/android/app/src/main/AndroidManifest.xml
@@ -79,5 +79,19 @@
 			android:value="true" />
 		<meta-data android:name="com.posthog.posthog.DEBUG" android:value="true" />
 		<meta-data android:name="flutterEmbedding" android:value="2" />
+		<activity
+			android:name="com.aboutyou.dart_packages.sign_in_with_apple.SignInWithAppleCallback"
+			android:exported="true"
+		>
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE" />
+
+				<data android:scheme="signinwithapple" />
+				<data android:path="callback" />
+			</intent-filter>
+		</activity>
+
 	</application>
 </manifest>
