--- a/packages/client/pubspec.yaml
+++ b/packages/client/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   posthog_flutter: ^4.4.1
   qr_flutter: ^4.1.0
   quick_actions: ^1.0.7
+  sign_in_button: ^3.2.0
   sign_in_with_apple: ^5.0.0
   simple_animations: ^5.0.2
   simple_gradient_text: ^1.3.0
