--- a/packages/client/pubspec.yaml
+++ b/packages/client/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   android_package_manager: ^0.7.1
   blur: ^3.1.0
+  carousel_slider: ^5.0.0
   connectivity_plus: ^5.0.1
   crypto: ^3.0.3
   dartz: ^0.10.1
