--- a/packages/client/pubspec.yaml
+++ b/packages/client/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/cook_button.png
     - assets/rally_button_blue.png
     - assets/rally_button_red.png
+    - assets/rally_button_white.png
 flutter_icons:
   image_path: "assets/app_logo.png"
   android: true
