rename: seeding assets to reflect tag based naming convention

--- a/packages/client/pubspec.yaml
+++ b/packages/client/pubspec.yaml
@@ -58,8 +58,8 @@ flutter:
   assets:
     - .env
     - assets/app_logo.png
-    - assets/collaborative_seating.png
-    - assets/consultative_seating.png
+    - assets/flexible_seating.png
+    - assets/strict_seating.png
     - assets/apple_icon.png
     - assets/google_icon.png
     - assets/cook_button.png
