--- a/.github/workflows/client-production-ios-deploy.yml
+++ b/.github/workflows/client-production-ios-deploy.yml
@@ -25,15 +25,13 @@ jobs:
       - run: |
           echo "PROD_SUPABASE_URL='$PROD_SUPABASE_URL'" >> .env
           echo "PROD_SUPABASE_ANON_KEY='$PROD_SUPABASE_ANON_KEY'" >> .env
-          echo "APP_ID='$APP_ID'" >> .env
-          echo "GLASSFY_STAGING_API_KEY='$GLASSFY_STAGING_API_KEY'" >> .env
-          echo "GLASSFY_PROD_API_KEY='$GLASSFY_PROD_API_KEY'" >> .env
+          echo "STAGING_SUPABASE_URL='$STAGING_SUPABASE_URL'" >> .env
+          echo "STAGING_SUPABASE_ANON_KEY='$STAGING_SUPABASE_ANON_KEY'" >> .env
         env:
           PROD_SUPABASE_URL: ${{ secrets.PROD_SUPABASE_URL }}
           PROD_SUPABASE_ANON_KEY: ${{ secrets.PROD_SUPABASE_ANON_KEY }}
-          APP_ID: ${{ secrets.PROD_APP_ID }}
-          GLASSFY_STAGING_API_KEY: ${{ secrets.GLASSFY_STAGING_API_KEY }}
-          GLASSFY_PROD_API_KEY: ${{ secrets.GLASSFY_PROD_API_KEY }}
+          STAGING_SUPABASE_URL: ${{ secrets.STAGING_SUPABASE_URL }}
+          STAGING_SUPABASE_ANON_KEY: ${{ secrets.STAGING_SUPABASE_ANON_KEY }}
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.0"
